Update Java3_notes.md